--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "next build && next export && touch out/.nojekyll",
+    "start": "next start",
+    "deploy": "gh-pages -d out --dotfiles"
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "gh-pages": "^3.1.0",
     "lodash-es": "^4.17.15",
     "newsapi": "^2.4.1",
     "next": "9.5.5",
